# qa-embeddings-loss-comparison

./: .gitignore  CLAUDE.md  CONCLUSIONS.md  README.md  README_FLEXIBLE_DATASET.md  plan.md  profile_results.txt  profile_trainer.py  pyproject.toml  repo.txt  run_experiment.py  run_hard_negative_tests.py  test_simplified_train.py  tmp_patch.py
configs/: multiple_positives_rank.json  profile_test.json  test.json
examples/: flexible_dataset_demo.py
src/rank_test/: __init__.py  async_dataloader.py  config.py  config_flexible.py  config_model.py  dataset.py  evaluate.py  evaluate_fixed.py  flexible_dataset.py  flexible_losses.py  ideas.md  losses.py  models.py  optimized_dataset.py  run_experiment.py  simplified_train.py  train.py  train_flexible.py  transforms.py  unified_losses.py
tests/integration/: test_flexible_pipeline.py
tests/unit/: test_flexible_dataset.py  test_flexible_losses.py
